# python-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPS_LICENSES.md  Dockerfile  README.md  justfile  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: project.md
scripts/: example.sh
src/project/: __main__.py  config.py
tests/integration/: test_dockerfile.py
tests/unit/: test_config.py
