[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
license = {text = "Proprietary"}
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "licensecheck>=2025.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "rust-just>=1.45.0",
    "ty>=0.0.8",
]

[project.scripts]
project = "project.__main__:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    # Default rules
    "E",    # pycodestyle errors
    "F",    # Pyflakes

    # Extra rules
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complex structure
    "D",    # pydocstyle
    "I",    # isort
    "PT",   # flake8-pytest-style
    "PL",   # Pylint
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
    "S",    # flake8-bandit
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "NPY",  # NumPy-specific rules
]
extend-select = [
    # Extra, preview rules
    "RUF022",   # unsorted-dunder-all
    "PLR6301",  # no-self-use
]
ignore = [
    # Docstrings
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__

    # Annotations
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN204",  # Missing return type annotation for __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103", "PLR0915", "PLR2004", "PT028", "S603", "S607"]

[tool.ty.analysis]
respect-type-ignore-comments = true  # Allow type: ignore comments

[tool.ty.environment]
python-version = "3.13"

[tool.ty.terminal]
error-on-warning = false  # Don't fail on warnings
output-format = "full"

[tool.ty.src]
include = ["src/**/*.py"]
exclude = []

[tool.ty.rules]
possibly-unresolved-reference = "error"
index-out-of-bounds = "error"

[tool.licensecheck]
format = "markdown"
file = "DEPS_LICENSES.md"
ignore_packages = []
zero = true
hide_output_parameters=["size"]
